--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "engines": {
     "npm": ">=10",
-    "node": "^20.12.0 || >=22.0.0"
+    "node": ">=22"
   },
   "release-it": {
     "npm": false,
